--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en-US" dir="ltr">
   <head>
     <title>Websocket Test</title>
+    <script src="jquery.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
-    Hi!
+    <div id="info">Loading...</div>
   </body>
 </html>
