WIP. multi-tenant

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
   <head>
-    <title>Websocket Test</title>
+    <title>screen.farm</title>
     <script src="jquery.js"></script>
     <script src="script.js"></script>
   </head>
