--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,8 +4,11 @@
     <title>screen.farm</title>
     <script src="jquery.js"></script>
     <script src="script.js"></script>
+    <script src="qrcode.js"></script>
   </head>
   <body>
     <div id="info">Loading...</div>
+    <div id="test"></div>
+    <div id="url"></div>
   </body>
 </html>
